--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
 }
 
 dependencies {
@@ -37,5 +38,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.jingdong.wireless.jingdongsdk:CommonMessageCenter:dev-1.0.0-SNAPSHOT'
+    // 引入本地aar
+    implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
+
+//    implementation 'com.jingdong.wireless.jingdongsdk:CommonMessageCenter:dev-1.0.0-SNAPSHOT'
 }
