--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        maven { url 'http://artifactory.jd.com/libs-releases-local/' }
-        maven { url "http://artifactory.jd.com/libs-snapshots-local/" }
+//        maven { url 'http://artifactory.jd.com/libs-releases-local/' }
+//        maven { url "http://artifactory.jd.com/libs-snapshots-local/" }
         maven { url "https://maven.google.com" }
         mavenCentral()
         jcenter()
@@ -17,8 +17,8 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url 'http://artifactory.jd.com/libs-releases-local/' }
-        maven { url "http://artifactory.jd.com/libs-snapshots-local/" }
+//        maven { url 'http://artifactory.jd.com/libs-releases-local/' }
+//        maven { url "http://artifactory.jd.com/libs-snapshots-local/" }
         maven { url "https://maven.google.com" }
         mavenCentral()
         jcenter()
